--- a/package.json
+++ b/package.json
@@ -4,21 +4,9 @@
   "description": "Тестовая задача на вакансию backend-разработчика в Совкомбанк Технологии.",
   "author": "Anton Zakharov",
   "private": true,
-  "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start:dev": "nest start --watch"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -27,11 +15,11 @@
     "@nestjs/typeorm": "^8.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "cyrillic-to-translit-js": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sqlite3": "^5.0.8",
+    "transliteration": "^2.2.0",
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
